fix: fixed spacing below judging guide, back button on scoring goes back to projects

--- a/app/(pages)/judges/scoring/_components/ScoringForm/ScoringSubComponents/TeamBlock.module.scss
+++ b/app/(pages)/judges/scoring/_components/ScoringForm/ScoringSubComponents/TeamBlock.module.scss
@@ -4,7 +4,8 @@
     align-items: center;
     gap: 12px;
     background: #005271;
-    height: 325px;
+    height: fit-content;
+    padding-bottom: 32px;
     box-shadow: 0px 4px 4px 0px rgba(0, 82, 113, 0.25);
 
     .topText {
